Bug 95319 - +CLCK response parse error
Summary: +CLCK response parse error
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-08 17:46 UTC by Aleksander Morgado
Modified: 2016-11-18 09:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (6.13 KB, patch)
2016-11-17 11:12 UTC, Aleksander Morgado
Details | Splinter Review

Description Aleksander Morgado 2016-05-08 17:46:37 UTC
Sun May  8 17:43:19 2016 daemon.info ModemManager[10479]: <debug> [1462729399.109632] [mm-port-serial-at.c:459] debug_log(): (ttyUSB2): --> 'AT+CCLK?<CR>'
Sun May  8 17:43:19 2016 daemon.info ModemManager[10479]: <debug> [1462729399.125142] [mm-port-serial-at.c:459] debug_log(): (ttyUSB2): <-- '<CR><LF>+CCLK: "80/01/06,00:00:28"<CR><LF><CR><LF>OK<CR><LF>'
Sun May  8 17:43:19 2016 daemon.info ModemManager[10479]: <debug> [1462729399.125293] [mm-iface-modem-time.c:622] update_network_timezone_ready(): Couldn't update network timezone: 'Couldn't match +CCLK reply'
Comment 1 Dan Williams 2016-05-27 17:55:07 UTC
It appears that CCLK doesn't have to report the timezone:

"If MT does not support time zone information then the three last characters of <time> are not returned by +CCLK?. The format of <time> is specified by use of the +CSDF command."

It also seems we should be prepared to parse 4-digit years (per +CSDF), even though I've never seen them in the wild since the default is 2-digit.
Comment 2 Aleksander Morgado 2016-11-17 11:12:49 UTC
Created attachment 128041 [details] [review]
Patch

Dan, how about these changes?
Comment 3 Dan Williams 2016-11-17 18:57:34 UTC
(In reply to Aleksander Morgado from comment #2)
> Created attachment 128041 [details] [review] [review]
> Patch
> 
> Dan, how about these changes?

LGTM
Comment 4 Aleksander Morgado 2016-11-18 09:25:52 UTC
(In reply to Dan Williams from comment #3)
> (In reply to Aleksander Morgado from comment #2)
> > Created attachment 128041 [details] [review] [review] [review]
> > Patch
> > 
> > Dan, how about these changes?
> 
> LGTM

Thanks for reviewing! Merging to git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.